--- a/feriado/modules/templates/index.html
+++ b/feriado/modules/templates/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt_br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Feriados</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <p>{{contexto}}</p>
+
+    <div class="msg-feriado">
+        <center>
+            {% if ehferiado %}
+            <h1>Hoje é feriado :)</h1>
+            {% else %}
+            <h1>Infelizmente hoje não é feriado :(</h1>
+            {% endif %}
+        </center>
+    </div>
+<center>
+<div class="btn-cadastro">
+<a href={% url 'cadastro' %} class="btn btn-warning" role="button" aria-pressed="true">Cadastro de feriado</a>
+</div>
+</center>
 </body>
+
+<style>
+    body{
+        background-color: #ffffff;
+    }
+
+    .msg-feriado h1{
+        text-align: center;
+        font-size: 38px;
+        margin-top: 50px;
+        text-transform: uppercase;
+    }
+
+    .btn-cadastro{
+        margin: 50px auto;
+    }
+</style>
+
 </html>
